update report