@@ -1,3 +1,18 @@
 # SBSE_Group3
 
 Tony dinh and Mitchell Follett group assignment (SBSE)
+
+Mitchell Follett a1770751@student.adelaide.edu.au
+
+
+
+
+Instructions to compile and run the code:
+
+1. Navigate to the folder GuiOptimiser
+
+2. run "java -jar --enable-preview GUiOptimiser.jar <target-app> <optimisation-method> <number-of-runs>"
+
+3. alter the last three params eg. java -jar --enable-preview GUiOptimiser.jar simpleApp.jar rs 2
+
+4. the options for optimisation-method are: rs (random), ge (genetic), hc (hill climber)
